Se agrega responsive

--- a/about_us.html
+++ b/about_us.html
@@ -36,6 +36,23 @@
           </form>
         </div>
       </nav>
+      <nav role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox"/>
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <a href="#"><li>Inicio</li></a>
+            <a href="#"><li>Catálogo</li></a>
+            <a href="#"><li>Contacto</li></a>
+            <a href="#"><li>Nosotros</li></a>
+            <a href="#"><li><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></li></a>
+            <a href="#"><li><img src="img/user.svg" alt="Enlace hacia perfil"></li></a>
+            <a href="#"><li><img src="img/lupa.svg"></li></a>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <div class="content about-us blur-white">
@@ -48,24 +65,23 @@
         <p>Elegimos el nombre “Benito Shop” haciendo honor a nuestro gato “Benito” que en paz descanse. El logo de la huellita es una referencia a la manchita que él tenía, junto con la fecha del fallecimiento.</p>
       </div>
     </div>
-
     <footer class="footer">
       <div class="footer__copyright">
         <img class="copyright" src="img/patita-logo.png">
         <p>© 2022 Benito Shop. Todos los derechos reservados</p>
       </div>
       <div class="footer__questions">
-        <p>Preguntas Frecuentes</p>
+        <h3>Preguntas Frecuentes</h3>
         <ul>
-          <li><img src="img/punto.png"> ¿Tienen tienda física?</li>
-          <li><img src="img/punto.png"> ¿Cada cuánto actualizan la página?</li>
-          <li><img src="img/punto.png"> ¿Cuánto tiempo dura mi pedido en llegar?</li>
-          <li><img src="img/punto.png"> ¿Cómo hago un pedido en línea?</li>
-          <li><img src="img/punto.png"> ¿Cómo puedo realizar una cotización?</li>
+          <li>• ¿Tienen tienda física?</li>
+          <li>• ¿Cada cuánto actualizan la página?</li>
+          <li>• ¿Cuánto tiempo dura mi pedido en llegar?</li>
+          <li>• ¿Cómo hago un pedido en línea?</li>
+          <li>• ¿Cómo puedo realizar una cotización?</li>
         </ul>
       </div>
       <div class="footer__social">
-        <p>Redes Sociales</p>
+        <h3>Redes Sociales</h3>
         <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg" alt="Enlace vía Messenger"></a>
         <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
         <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
