--- a/card_page.html
+++ b/card_page.html
@@ -16,12 +16,32 @@
 <body>
   <div id="wrapper">
     <header>
+      <nav role="navigation">
+        <div class="logo-pagina">
+          <a href="index.html"><img src="img/logo1.svg" alt=""></a>
+        </div>
+        <div id="navigation__menu">
+          <input type="checkbox"/>
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="navigation__links">
+            <a href="index.html"><li>Inicio</li></a>
+            <a href="products.html"><li>Catálogo</li></a>
+            <a href="contact.html"><li>Contacto</li></a>
+            <a href="about_us.html"><li>Nosotros</li></a>
+            <a href="cart-page-empty.html"><li><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></li></a>
+            <a href="#"><li><img src="img/user.svg" alt="Enlace hacia perfil"></li></a>
+            <a href="#"><li><img src="img/lupa.svg"></li></a>
+          </ul>
+        </div>
+      </nav>
       <nav>
         <div class="nav-principal">
           <ul>
             <li><a href="index.html"><img src="img/logo1.svg"></a></li>
-            <li><a href="#">Catálogo</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="products.html">Catálogo</a></li>
+            <li><a href="contact.html">Contacto</a></li>
             <li><a href="about_us.html">Nosotros</a></li>
             <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
             <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
@@ -30,15 +50,15 @@
         <div>
           <form>
             <div class="search-input">
-              <input type="search" class="search-input__bar" name="Email" placeholder="¡Busca un artículo!">
+              <input type="search" class="search-input__bar" name="search" placeholder="¡Busca un artículo!">
               <input class="button--submit" src="img/lupa.svg" type="image">
             </div>
           </form>
         </div>
       </nav>
     </header>
-    <section class="content product-card">
-      <div>
+    <section class="content">
+      <div class="product-card">
         <div class="product-card--box">
           <img src="img/bolso2.png" alt="Bolso tipo transportadora para animales">
           <div class="product-card__small-box"><p>₡18000 i.v.a</p></div>
@@ -49,9 +69,9 @@
           <p>Esta transportadora es muy útil para llevar a nuestras mascotas domésticas a cualquier lugar.</p>
           <p class="product-card--especifications">Especificaciones:</p>
           <ul>
-            <li><img src="img/punto-negro.png"> Material: Nylon</li>
-            <li><img src="img/punto-negro.png"> Tamaño: 40cm x 38cm</li>
-            <li><img src="img/punto-negro.png"> Peso máximo: 7,5Kg ; es el peso máximo (recomendado) a transportar</li>
+            <li>• Material: Nylon</li>
+            <li>• Tamaño: 40cm x 38cm</li>
+            <li>• Peso máximo: 7,5Kg ; es el peso máximo (recomendado) a transportar</li>
           </ul>
           <button class="button-white--big">Añadir al Carro</button>
         </div>
@@ -63,17 +83,17 @@
         <p>© 2022 Benito Shop. Todos los derechos reservados</p>
       </div>
       <div class="footer__questions">
-        <p>Preguntas Frecuentes</p>
+        <h3>Preguntas Frecuentes</h3>
         <ul>
-          <li><img src="img/punto.png"> ¿Tienen tienda física?</li>
-          <li><img src="img/punto.png"> ¿Cada cuánto actualizan la página?</li>
-          <li><img src="img/punto.png"> ¿Cuánto tiempo dura mi pedido en llegar?</li>
-          <li><img src="img/punto.png"> ¿Cómo hago un pedido en línea?</li>
-          <li><img src="img/punto.png"> ¿Cómo puedo realizar una cotización?</li>
+          <li>• ¿Tienen tienda física?</li>
+          <li>• ¿Cada cuánto actualizan la página?</li>
+          <li>• ¿Cuánto tiempo dura mi pedido en llegar?</li>
+          <li>• ¿Cómo hago un pedido en línea?</li>
+          <li>• ¿Cómo puedo realizar una cotización?</li>
         </ul>
       </div>
       <div class="footer__social">
-        <p>Redes Sociales</p>
+        <h3>Redes Sociales</h3>
         <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg" alt="Enlace vía Messenger"></a>
         <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
         <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
