--- a/design_system.html
+++ b/design_system.html
@@ -17,25 +17,46 @@
   <!--Navegación-->
   <header>
     <nav>
-      <div class="nav-principal">
-        <ul>
-          <li><a href="#"><img src="img/logo1.svg"></a></li>
-          <li><a href="#">Catálogo</a></li>
-          <li><a href="#">Contacto</a></li>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
-          <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
-        </ul>
-      </div>
-      <div>
-        <form>
-          <div class="search-input">
-              <input type="search" class="search-input__bar" name="Email" placeholder="¡Busca un artículo!">
+      <nav role="navigation">
+        <div class="logo-pagina">
+          <a href="index.html"><img src="img/logo1.svg" alt=""></a>
+        </div>
+        <div id="navigation__menu">
+          <input type="checkbox"/>
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="navigation__links">
+            <a href="index.html"><li>Inicio</li></a>
+            <a href="products.html"><li>Catálogo</li></a>
+            <a href="contact.html"><li>Contacto</li></a>
+            <a href="about_us.html"><li>Nosotros</li></a>
+            <a href="cart-page-empty.html"><li><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></li></a>
+            <a href="#"><li><img src="img/user.svg" alt="Enlace hacia perfil"></li></a>
+            <a href="#"><li><img src="img/lupa.svg"></li></a>
+          </ul>
+        </div>
+      </nav>
+      <nav>
+        <div class="nav-principal">
+          <ul>
+            <li><a href="index.html"><img src="img/logo1.svg"></a></li>
+            <li><a href="products.html">Catálogo</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+            <li><a href="about_us.html">Nosotros</a></li>
+            <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
+            <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
+          </ul>
+        </div>
+        <div>
+          <form>
+            <div class="search-input">
+              <input type="search" class="search-input__bar" name="search" placeholder="¡Busca un artículo!">
               <input class="button--submit" src="img/lupa.svg" type="image">
-          </div>
-        </form>
-      </div>
-    </nav>
+            </div>
+          </form>
+        </div>
+      </nav>
   </header>
   <!--Navegación-->
 
@@ -47,7 +68,6 @@
     <a class="button-white--small" href="#">Ver artículos</a>
     <a class="button-yellow--small" href="#">Ver</a>
     <a class="button-yellow--small2" href="#">Atrás</a>
-    <a href="#"> </a><!--Enlace redondeado-->
   </div>
   <div>
     <p>Botones</p>
@@ -68,7 +88,7 @@
   </div>
 
 <!--Paleta de colores-->
-<div >
+<div>
   <p>Paleta de Colores</p>
   <div class="color-containers color1">#c6b058</div>
   <div class="color-containers color2">#dfc764</div>
@@ -103,17 +123,17 @@
       <p>© 2022 Benito Shop. Todos los derechos reservados</p>
     </div>
     <div class="footer__questions">
-      <p>Preguntas Frecuentes</p>
+      <h3>Preguntas Frecuentes</h3>
       <ul>
-        <li><img src="img/punto.png"> ¿Tienen tienda física?</li>
-        <li><img src="img/punto.png"> ¿Cada cuánto actualizan la página?</li>
-        <li><img src="img/punto.png"> ¿Cuánto tiempo dura mi pedido en llegar?</li>
-        <li><img src="img/punto.png"> ¿Cómo hago un pedido en línea?</li>
-        <li><img src="img/punto.png"> ¿Cómo puedo realizar una cotización?</li>
+        <li>• ¿Tienen tienda física?</li>
+        <li>• ¿Cada cuánto actualizan la página?</li>
+        <li>• ¿Cuánto tiempo dura mi pedido en llegar?</li>
+        <li>• ¿Cómo hago un pedido en línea?</li>
+        <li>• ¿Cómo puedo realizar una cotización?</li>
       </ul>
     </div>
     <div class="footer__social">
-      <p>Redes Sociales</p>
+      <h3>Redes Sociales</h3>
       <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg" alt="Enlace vía Messenger"></a>
       <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
       <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
